--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,6 +19,8 @@ jobs:
       pull-requests: write
     steps:
     - uses: actions/checkout@v5
+      with:
+        fetch-tags: true
 
     - uses: actions/setup-python@v5
       with:
