--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -26,6 +26,12 @@ jobs:
       with:
         python-version: '3.13'
 
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 20
+        cache: 'npm'
+        cache-dependency-path: modal-js/package-lock.json
+
     - name: Config git user
       run: |
         git config user.name "${GITHUB_ACTOR}"
