--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -32,6 +32,11 @@ jobs:
         cache: 'npm'
         cache-dependency-path: modal-js/package-lock.json
 
+    - name: Install npm packages
+      run: npm install
+      working-directory: ./modal-js
+
+
     - name: Config git user
       run: |
         git config user.name "${GITHUB_ACTOR}"
