--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -46,12 +46,12 @@ jobs:
       run: |
         python ci/release.py version ${{ inputs.update }}
 
-    # - name: Create Pull Request
-    #   id: cpr
-    #   uses: peter-evans/create-pull-request@v7
+    - name: Create Pull Request
+      id: cpr
+      uses: peter-evans/create-pull-request@v7
 
-    # - name: Check outputs
-    #   if: ${{ steps.cpr.outputs.pull-request-number }}
-    #   run: |
-    #     echo "Pull Request Number - ${{ steps.cpr.outputs.pull-request-number }}"
-    #     echo "Pull Request URL - ${{ steps.cpr.outputs.pull-request-url }}"
+    - name: Check outputs
+      if: ${{ steps.cpr.outputs.pull-request-number }}
+      run: |
+        echo "Pull Request Number - ${{ steps.cpr.outputs.pull-request-number }}"
+        echo "Pull Request URL - ${{ steps.cpr.outputs.pull-request-url }}"
