--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -46,9 +46,17 @@ jobs:
       run: |
         python ci/release.py version ${{ inputs.update }}
 
+    - name: Populate metadata for pull request
+      run: |
+        echo "MY_TITLE='Title for release'" >> $GITHUB_ENV
+
+
     - name: Create Pull Request
       id: cpr
       uses: peter-evans/create-pull-request@v7
+      with:
+        title: ${{ env.MY_TITLE }}
+
 
     - name: Check outputs
       if: ${{ steps.cpr.outputs.pull-request-number }}
