--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -55,7 +55,9 @@ jobs:
       uses: peter-evans/create-pull-request@v7
       with:
         title: ${{ env.PR_TITLE }}
-
+        body: ${{ env.PR_TITLE }}
+        labels: |
+          auto-release
 
     - name: Check outputs
       if: ${{ steps.cpr.outputs.pull-request-number }}
